# organization_tool

./: .env  .gitignore  README.md  docker-compose.yml
backend/: alembic.ini  backend.dockerfile  mypy.ini  pyproject.toml
backend/app/: __inti__.py  env.py
backend/app/api/: session.py
backend/app/api/routers/: __init__.py  category.py  login.py  root.py  time_range_event.py
backend/app/core/: __init__.py  password.py
backend/app/daos/: __init__.py  category.py  sub_category.py  time_range_event.py  user.py
backend/app/daos/utils/: __init__.py  base.py  exeptions.py
backend/app/db/: __init__.py
backend/app/db/functions/: standart_date.py
backend/app/db/models/: __init__.py
backend/app/db/tables/: __init__.py  category.py  (+4 more)
backend/app/schemas/: __init__.py  category.py  sub_category.py  time_range_event.py  user.py
backend/app/versions/: a9368478f5c4_time_range_event.py  dcd2eb6afe4d_timer_event_constrain.py  deda4dea69be_view_and_functions_test.py  f60c78058434_user_update.py
backend/backend/: __inti__.py  env.py  main.py
backend/backend/api/: __init__.py  session.py
backend/backend/daos/: __init__.py  _base.py  category.py  sub_category.py  time_range_event.py  user.py
backend/backend/db/: __init__.py  models.py
backend/backend/models/: __init__.py  _base.py  base.py  category.py  sub_category.py  time_range_event.py  user.py
backend/backend/schemas/: __init__.py  _base.py  category.py  sub_category.py  time_range_event.py  user.py
backend/backend/versions/: 2e090011954e_added_category_tables.py  a99cf5ebfc9b_first_version.py  c70192d5602a_first_migration.py  deda4dea69be_view_and_functions_test.py
backend/scripts/: mypy.sh
(+90 files in other folders)
