[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Lucas-GBP <lucas.bitencourte.pedroso@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
alembic = "^1.13.1"
uvicorn = "^0.28.0"
fastapi = "^0.110.0"
pydantic = "^2.6.4"
psycopg2-binary = "^2.9.9"
psycopg2 = "^2.9.9"
asyncmy = "^0.2.9"
uvloop = "^0.19.0"
asyncpg = "^0.29.0"
alembic-utils = "^0.8.4"
bcrypt = "^4.2.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
